SCSS FIXUP: SQUASH

--- a/frontend/assets/scss/_bridges.scss
+++ b/frontend/assets/scss/_bridges.scss
@@ -35,8 +35,8 @@
         }
     }
 
-    p * {
-        font-size: 1.5rem;
+    p {
+        font-size: 1.5rem !important;
     }
 }
 
